apps/dssp-targetp-20/prod/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: dssp-targetp-20
#   namespace: prod
#   labels:
#     app: dssp-targetp-20
#     backstage.io/kubernetes-id: dssp-targetp-20
#     environment: prod
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: dssp-targetp-20
#   template:
#     metadata:
#       labels:
#         app: dssp-targetp-20
#         backstage.io/kubernetes-id: dssp-targetp-20
#         environment: prod
#     spec:
#       containers:
#         - name: dssp-targetp-20
#           image: chaitanyapandeygspann/dssp-targetp-20:1.0.3
#           ports:
#             - containerPort: 5000
#           env:
#             - name: APP_ENV
#               value: "prod"



apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetp-20
  namespace: prod
  labels:
    app: dssp-targetp-20
    backstage.io/kubernetes-id: dssp-targetp-20
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetp-20
  template:
    metadata:
      labels:
        app: dssp-targetp-20
        backstage.io/kubernetes-id: dssp-targetp-20
        environment: prod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: dssp-targetp-20
          image: chaitanyapandeygspann/dssp-targetp-20:1.0.3
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
